; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/ipvs/extr_ip_vs_sync.c_hton_seq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/ipvs/extr_ip_vs_sync.c_hton_seq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ip_vs_seq = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ip_vs_seq*, %struct.ip_vs_seq*)* @hton_seq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hton_seq(%struct.ip_vs_seq* %0, %struct.ip_vs_seq* %1) #0 {
  %3 = alloca %struct.ip_vs_seq*, align 8
  %4 = alloca %struct.ip_vs_seq*, align 8
  store %struct.ip_vs_seq* %0, %struct.ip_vs_seq** %3, align 8
  store %struct.ip_vs_seq* %1, %struct.ip_vs_seq** %4, align 8
  %5 = load %struct.ip_vs_seq*, %struct.ip_vs_seq** %3, align 8
  %6 = getelementptr inbounds %struct.ip_vs_seq, %struct.ip_vs_seq* %5, i32 0, i32 2
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.ip_vs_seq*, %struct.ip_vs_seq** %4, align 8
  %9 = getelementptr inbounds %struct.ip_vs_seq, %struct.ip_vs_seq* %8, i32 0, i32 2
  %10 = call i32 @put_unaligned_be32(i32 %7, i32* %9)
  %11 = load %struct.ip_vs_seq*, %struct.ip_vs_seq** %3, align 8
  %12 = getelementptr inbounds %struct.ip_vs_seq, %struct.ip_vs_seq* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.ip_vs_seq*, %struct.ip_vs_seq** %4, align 8
  %15 = getelementptr inbounds %struct.ip_vs_seq, %struct.ip_vs_seq* %14, i32 0, i32 1
  %16 = call i32 @put_unaligned_be32(i32 %13, i32* %15)
  %17 = load %struct.ip_vs_seq*, %struct.ip_vs_seq** %3, align 8
  %18 = getelementptr inbounds %struct.ip_vs_seq, %struct.ip_vs_seq* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.ip_vs_seq*, %struct.ip_vs_seq** %4, align 8
  %21 = getelementptr inbounds %struct.ip_vs_seq, %struct.ip_vs_seq* %20, i32 0, i32 0
  %22 = call i32 @put_unaligned_be32(i32 %19, i32* %21)
  ret void
}

declare dso_local i32 @put_unaligned_be32(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
